Fix alignment

--- a/src/stylesheets/components/modules/_modal.scss
+++ b/src/stylesheets/components/modules/_modal.scss
@@ -69,7 +69,7 @@
   box-shadow: inset 0 -.1rem .3rem $black-disabled;
   color: $black-secondary;
   display: flex;
-  margin: auto;
+  margin: 0;
   overflow: hidden;
   padding: 2.5rem 2rem;
   text-transform: uppercase;
